# libretether

./: .dockerignore  .editorconfig  .gitignore  .lintstagedrc.json  .publisher.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  Runfile.json  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.github/: ARCHITECTURE.md  DEVELOPMENT.md  RELAY.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
libretether-agent/: Cargo.toml  Runfile.json
libretether-agent/src/: capture.rs  config.rs  encode.rs  handlers.rs  host.rs  input.rs  main.rs  mf_encoder.rs  net.rs  platform.rs  proc.rs  pwstream.rs  rdp.rs  service.rs  session.rs  ssh_server.rs  transfer.rs  wayland.rs  wincap.rs  wincap_hw.rs  x11env.rs
libretether-common/: Cargo.toml
libretether-common/src/: lib.rs
libretether-desktop/: Runfile.json  index.html  package.json  vite.config.ts
libretether-desktop/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
libretether-desktop/src-tauri/: Cargo.toml  tauri.conf.json
libretether-desktop/src-tauri/capabilities/: default.json
libretether-desktop/src-tauri/icons/: icon.icns
libretether-desktop/src-tauri/src/: commands.rs  deploy.rs  error.rs  launch.rs  lib.rs  link.rs  logbook.rs  rdp.rs  registry.rs  server.rs  session.rs  ssh.rs  state.rs  tailscale.rs  transfer.rs  transfer_queue.rs  tunnel.rs  window.rs
libretether-desktop/src/components/: AddMachineDrawer.tsx  ClientDetailModal.tsx  Combobox.tsx  CommandPalette.tsx  ControlOverlay.tsx  ControllerForm.tsx  CopyRow.tsx  DeployModal.tsx  DeployScript.tsx  DetailDrawer.tsx  FileBrowser.tsx  Menu.tsx  OsIcon.tsx  OsLogos.tsx  PageHeader.tsx  PhoneInstall.tsx  QualityControls.tsx  RelayConnecting.tsx  SecurityPanel.tsx  ShortcutsOverlay.tsx  Sidebar.tsx  TransferDialog.tsx  TransfersPanel.tsx  ui.tsx
libretether-desktop/src/lib/: api.ts  cn.ts  format.ts  hotkeys.ts  meta.tsx  mock.ts  toast.tsx  types.ts  useAsyncAction.ts  useMachineActions.ts  useTransfers.ts  videoFrame.ts
libretether-desktop/src/pages/: ConnectionPage.tsx  ControllerPage.tsx  ControllerSelect.tsx  LogsPage.tsx  MachinesPage.tsx
libretether-portal/: README.md
libretether-portal/static/: index.html
libretether-protocol/: Cargo.toml  Runfile.json
libretether-protocol/src/: crypto.rs  e2e.rs  frame.rs  lib.rs  pairing.rs  relay.rs  secret.rs  tls.rs  transfer.rs  video.rs  wordlist.rs
libretether-relay/: Cargo.toml  Runfile.json
libretether-relay/src/: logbook.rs  main.rs  portal.rs
scripts/: check-licenses.mjs  fix-appimage.sh  install-package.sh
scripts/install/: install-linux.sh  install-macos.sh  install-windows.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/agent/: Cargo.toml
src-tauri/agent/src/: config.rs  handlers.rs  host.rs  input.rs  main.rs  net.rs  platform.rs  pwstream.rs  rdp.rs  service.rs  session.rs  wayland.rs
src-tauri/capabilities/: default.json
src-tauri/protocol/: Cargo.toml
src-tauri/protocol/src/: crypto.rs  lib.rs  relay.rs  tls.rs
src-tauri/relay/: Cargo.toml
src-tauri/server/: Cargo.toml
src-tauri/server/src/: main.rs
src-tauri/src/: commands.rs  deploy.rs  error.rs  lib.rs  link.rs  main.rs  rdp.rs  registry.rs  server.rs  session.rs  state.rs  tunnel.rs
src/components/: ControlOverlay.tsx  DeployModal.tsx  PageHeader.tsx  Sidebar.tsx  confirm.tsx  ui.tsx
src/lib/: api.ts  toast.tsx  types.ts
src/pages/: ControllerPage.tsx  MachinesPage.tsx
