[workspace]
resolver = "2"
members = [
	"libretether-desktop/src-tauri",
	"libretether-agent",
	"libretether-common",
	"libretether-protocol",
	"libretether-relay",
]

# Single source of truth for every crate's version — each member sets
# `version.workspace = true`. The `release` task in Runfile.json bumps this in
# lockstep with the desktop package.json / tauri.conf.json, so the agent (which
# reports `CARGO_PKG_VERSION`) stops reporting a stale, hand-set 0.1.0.
[workspace.package]
version = "0.23.0"

# Applied workspace-wide (the relay/agent binaries and the desktop bundle all
# ship from `--release`). Tuned for *release build time*, not binary size: the
# desktop Tauri bundle has a huge dependency graph, and the old size-optimized
# settings (fat LTO + a single codegen unit) turned its final link into the
# dominant cost of cutting a release.
#
#   - lto = false        fat LTO is one mostly-serial whole-program link pass;
#                        dropping it is by far the biggest build-time win.
#   - codegen-units = 16 restores intra-crate parallelism (1 forced every crate
#                        through a single, unparallelizable codegen unit).
#   - opt-level = 2      the conventional release level; "s" only paid off while
#                        we were chasing binary size, which we no longer are.
#
# Bigger binaries are an accepted trade — we optimize for how fast a release
# builds, not how small it ships. panic = "abort" / strip stay: both are cheap
# and trim a little link/codegen work rather than adding any.
[profile.release]
panic = "abort"
codegen-units = 16
lto = false
opt-level = 2
strip = true
