[package]
name = "libretether-agent"
version.workspace = true
description = "LibreTether headless agent — keeps a machine reachable for remote control"
edition = "2021"
license = "AGPL-3.0-only"

[[bin]]
name = "libretether-agent"
path = "src/main.rs"

[dependencies]
libretether-protocol = { path = "../libretether-protocol" }
libretether-common = { path = "../libretether-common" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "net", "sync", "signal"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
base64 = "0.22"
whoami = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
xcap = "0.3"
enigo = "0.3"
# Embedded SSH server: russh on the `ring` backend (matching the rest of the
# workspace — avoids pulling aws-lc-rs's cmake/C build into release cross-compiles),
# plus portable-pty for a ConPTY (Windows) / PTY (Unix) shell behind it.
russh = { version = "0.61", default-features = false, features = ["ring"] }
portable-pty = "0.9"
rand = "0.9"

# Wayland support (XDG desktop portals + PipeWire) is Linux-only and always
# built in there. `ashpd` is pure D-Bus; `pipewire`/`libspa` bind libpipewire, so
# Linux builds need `libpipewire-0.3-dev` (installed by `run setup`).
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "remote_desktop", "screencast", "screenshot"] }
pipewire = "0.10"
libspa = "0.10"
