[package]
name = "libretether-agent"
version.workspace = true
description = "LibreTether headless agent — keeps a machine reachable for remote control"
edition = "2021"
license = "AGPL-3.0-only"

[[bin]]
name = "libretether-agent"
path = "src/main.rs"

[dependencies]
libretether-protocol = { path = "../libretether-protocol" }
libretether-common = { path = "../libretether-common" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "net", "sync", "signal", "fs"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
base64 = "0.22"
whoami = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Inter-frame H.264 for the live session, decoded by WebCodecs on the controller.
# `source` compiles OpenH264's bundled C++ via `cc` (no cmake). x86 SIMD wants
# `nasm` at build time; without it set `OPENH264_NO_ASM=1` for the slower C-only
# kernels. `image`'s JPEG/PNG path stays for one-shot screenshots.
openh264 = { version = "0.9", default-features = false, features = ["source"] }
# Data-parallel RGBA→I420 conversion + frame hashing across cores.
rayon = "1"
xcap = "0.3"
enigo = "0.3"
# Embedded SSH server: russh on the `ring` backend (matching the rest of the
# workspace — avoids pulling aws-lc-rs's cmake/C build into release cross-compiles),
# plus portable-pty for a ConPTY (Windows) / PTY (Unix) shell behind it.
russh = { version = "0.61", default-features = false, features = ["ring"] }
portable-pty = "0.9"
rand = "0.9"

# Wayland support (XDG desktop portals + PipeWire) is Linux-only and always
# built in there. `ashpd` is pure D-Bus; `pipewire`/`libspa` bind libpipewire, so
# Linux builds need `libpipewire-0.3-dev` (installed by `run setup`).
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "remote_desktop", "screencast", "screenshot"] }
pipewire = "0.10"
libspa = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56.0"

# Windows live capture goes through DXGI Desktop Duplication (persistent,
# GPU-accelerated, only wakes on screen change) instead of xcap's per-frame GDI
# BitBlt, which was the dominant cost on Windows. Same `windows` version/features
# xcap pulls, so Cargo unifies on one build.
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.59"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
	# Media Foundation H.264 encoder MFT (src/mf_encoder.rs). Always compiled on the
	# Windows target; the encoder is selected at runtime, off by default until the
	# hardware path is validated (LIBRETETHER_ENCODER=hardware to opt in).
	"Win32_Media_MediaFoundation",
	"Win32_System_Com",
	"Win32_System_Ole",
	"Win32_System_Variant",
]
