[package]
name = "libretether-common"
version.workspace = true
description = "Shared host-side utilities for LibreTether (time, shutdown signal, process helpers)"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "libretether_common"

[dependencies]
tokio = { version = "1", features = ["signal", "process", "io-util", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
