[package]
name = "libretether-protocol"
version.workspace = true
description = "Shared wire protocol, transport and identity for LibreTether"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "libretether_protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring", "pem"] }
ed25519-dalek = "2"
base64 = "0.22"
getrandom = "0.2"
subtle = "2"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "macros", "rt"] }
