[package]
name = "libretether-protocol"
version.workspace = true
description = "Shared wire protocol, transport and identity for LibreTether"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "libretether_protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
# Bind the QUIC server socket ourselves so a `[::]` listener can clear IPV6_V6ONLY
# (dual-stack: accept IPv4-mapped clients too) — quinn's `Endpoint::server` can't.
socket2 = "0.6"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring", "pem"] }
ed25519-dalek = "2"
base64 = "0.22"
getrandom = "0.2"
subtle = "2"
thiserror = "2"
spake2 = "0.4.0"
hkdf = "0.13.0"
sha2 = "0.11.0"
chacha20poly1305 = "0.11.0"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "macros", "rt"] }
