[package]
name = "libretether-relay"
version = "0.1.0"
description = "LibreTether relay — routes between a controller and its agents through a public cloud host"
edition = "2021"
license = "AGPL-3.0-only"

[[bin]]
name = "libretether-relay"
path = "src/main.rs"

[dependencies]
libretether-protocol = { path = "../libretether-protocol" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "net", "sync"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
base64 = "0.22"
