[package]
name = "tether-agent"
version = "0.1.0"
description = "Tether headless agent — keeps a machine reachable for remote control"
edition = "2021"
license = "MIT"

[[bin]]
name = "tether-agent"
path = "src/main.rs"

[features]
# `wayland` adds XDG-portal input + screenshots (D-Bus only, no extra system deps).
# `wayland-capture` adds live screen capture via the ScreenCast portal + PipeWire,
# which needs `libpipewire-0.3-dev` at build time (installed by `run setup`).
default = ["wayland"]
wayland = ["dep:ashpd"]
wayland-capture = ["wayland", "dep:pipewire", "dep:libspa"]

[dependencies]
tether-protocol = { path = "../protocol" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "net", "sync", "signal"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
base64 = "0.22"
whoami = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
xcap = "0.3"
enigo = "0.3"

# Wayland support (XDG desktop portals). `ashpd` is pure D-Bus; `pipewire`/`libspa`
# bind libpipewire and are only pulled in by the `wayland-capture` feature.
ashpd = { version = "0.13", optional = true, default-features = false, features = ["tokio", "remote_desktop", "screencast", "screenshot"] }
pipewire = { version = "0.10", optional = true }
libspa = { version = "0.10", optional = true }
